--- a/src/app/components/character/character.component.html
+++ b/src/app/components/character/character.component.html
@@ -1,1 +1,8 @@
-<p>character works!</p>
+<div class="character">
+  <img src="{{character.image}}" alt="{{character.name}}">
+  <div><b>{{character.name}}</b></div>
+  <div>{{character.status}}</div>
+  <div>{{character.species}}</div>
+  <div>{{character.origin.name}}</div>
+  <div>{{character.location.name}}</div>
+</div>
