--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,4 +1,12 @@
-.ownTitle{
+.ownTitle {
   background-color: blue;
   margin: 0;
+  box-sizing: border-box;
+  padding: 2%;
+}
+
+.ownTitle > a,
+.ownTitle > a:active {
+  text-decoration: none;
+  color: black;
 }
