--- a/src/app/components/characters/characters.component.html
+++ b/src/app/components/characters/characters.component.html
@@ -1,1 +1,3 @@
-<p>characters works!</p>
+<div class="characters">
+  <app-character *ngFor="let character of characters" [character]="character"></app-character>
+</div>
