--- a/src/app/components/episode/episode.component.html
+++ b/src/app/components/episode/episode.component.html
@@ -2,5 +2,6 @@
   <h3>{{episode.name}}</h3>
   <div>Episode: {{episode.episode}}</div>
   <div>Air Date: {{episode.air_date}}</div>
-  <button (click)="getDetails()">Episode details</button>
+  <br>
+  <button mat-raised-button color="primary" (click)="getDetails()">Episode Details</button>
 </div>
