--- a/src/app/components/episodes/episodes.component.css
+++ b/src/app/components/episodes/episodes.component.css
@@ -1,11 +1,20 @@
-.title{
+.title {
   text-align: center;
-  background-color: #e8d7d7;
+  background-color: #fafa3c;
   margin: 0;
   padding: 2%;
 }
 
-.episodes{
+.episodes {
   display: flex;
   flex-wrap: wrap;
+
+  background-color: snow;
+}
+
+.paginator {
+  background-color: snow;
+  font-size: 14px;
+  padding: 3%;
+  color: black;
 }
